--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title></title>
 		<script src="js/index.js"></script>
 		<link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/index.css">		
+		<link rel="stylesheet" href="../css/font-awesome.min.css">
+		<link rel="stylesheet" href="../css/index.css">		
 	</head>
 	<body>
 			<script type="text/javascript">rBackGround();</script>
