--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<div class="cursorBox">
 						<div class="cursor"></div>
 					</div>
-					<div class="text">点击屏幕的任何地方</div>
+					<div class="text">点击</div>
 				</div>
 			</section></a>
 	</body>
